scripts/nullness/annotator/url294e6c45f3_Ecdosis_NMergeNew_tgz-pJ8-TestJ8.txt
../annotator/url294e6c45f3_Ecdosis_NMergeNew_tgz-pJ8-TestJ8/src/edu/luc/nmerge/graph/SimpleQueue.java:22: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url294e6c45f3_Ecdosis_NMergeNew_tgz-pJ8-TestJ8/src/edu/luc/nmerge/graph/Converter.java:32: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url294e6c45f3_Ecdosis_NMergeNew_tgz-pJ8-TestJ8/src/edu/luc/nmerge/graph/SimpleQueue.java:70: error: cannot find symbol
	@Initializer public void add( E item )
	 ^
  symbol:   class Initializer
  location: class SimpleQueue<E>
  where E is a type-variable:
    E extends Object declared in class SimpleQueue
../annotator/url294e6c45f3_Ecdosis_NMergeNew_tgz-pJ8-TestJ8/src/edu/luc/nmerge/graph/Converter.java:68: error: cannot find symbol
	@Initializer public Graph create( ArrayList<Pair> pairs, int numVersions )
	 ^
  symbol:   class Initializer
  location: class Converter
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors
